# XDP-Router

./: README.md  Vagrantfile  build_debug.sh  build_release.sh  demo_router.sh  demo_routerctl.sh  shell.nix
router-client/: Cargo.toml  client.rs
router-common/: Cargo.toml  common.rs
router-server/: Cargo.toml  server.rs  xdp_ctl.rs
router-xdp/: Cargo.toml  xdp_process.rs
xtask/: Cargo.toml
